syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcForwarderKit";

service GrpcForwarder {
	rpc Ready(google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc Connect (ConnectRequest) returns (ConnectReply);
	rpc Subscribe (SubscribeRequest) returns (stream DataReply);
	rpc Send(SendRequest) returns (google.protobuf.Empty);
}

enum ForwardErrorCode {
  Success = 0;
  NotExists = 1;
}

message ConnectRequest {
	string ServerEndpoint = 1;  //127.0.0.1:8000
}

message ConnectReply {
	ForwardErrorCode ErrorCode = 1;
	string ConnectId = 2;
}

message SubscribeRequest {
	string ConnectId = 1;
}

message DataReply {
	ForwardErrorCode ErrorCode = 1;
	string ConnectId = 2;
	bytes Data = 3;
}

message SendRequest {
	string ConnectId = 1;
	bytes Data = 2;
}
